--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -39,10 +39,13 @@
     "@requestnetwork/payment-detection": "0.43.1-next.2043",
     "@requestnetwork/payment-processor": "0.45.1-next.2043",
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
+    "@wagmi/connectors": "^5.2.0",
+    "@wagmi/core": "^2.13.8",
     "ethers": "^5.7.2",
     "svelte-sonner": "^0.3.27",
-    "viem": "^2.9.15",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "viem": "^2.21.27",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
     "@sveltejs/package": "^2.0.0",
