--- a/packages/create-invoice-form/package.json
+++ b/packages/create-invoice-form/package.json
@@ -33,11 +33,11 @@
   ],
   "dependencies": {
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
-    "viem": "^2.9.15"
+    "viem": "^2.9.15",
+    "@wagmi/core": "^2.13.8"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
-    "@wagmi/core": "^2.13.8",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
     "typescript": "^5.0.0",
