--- a/packages/add-stakeholder/package.json
+++ b/packages/add-stakeholder/package.json
@@ -12,7 +12,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"clean": "rm -rf dist && rm -rf .svelte-kit",
-		"is-release-needed": "bash ../../scripts/is-release-needed.sh"
+		"check-release-type": "bash ../../scripts/check-release-type.sh",
+		"publish-next-release": "bash ../../scripts/publish-next-release.sh"
 	},
 	"exports": {
 		".": {
