--- a/packages/create-invoice-form/package.json
+++ b/packages/create-invoice-form/package.json
@@ -33,8 +33,8 @@
     "!dist/**/*.spec.*"
   ],
   "dependencies": {
-    "@requestnetwork/data-format": "^0.19.0",
-    "@requestnetwork/request-client.js": "0.47.1-next.2043",
+    "@requestnetwork/data-format": "0.19.1",
+    "@requestnetwork/request-client.js": "0.50.0",
     "@wagmi/core": "^2.13.8",
     "viem": "^2.9.15"
   },
