--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -37,9 +37,9 @@
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@requestnetwork/payment-detection": "0.43.1-next.2043",
-    "@requestnetwork/payment-processor": "0.45.1-next.2043",
-    "@requestnetwork/request-client.js": "0.47.1-next.2043",
+    "@requestnetwork/payment-detection": "0.45.1",
+    "@requestnetwork/payment-processor": "0.49.0",
+    "@requestnetwork/request-client.js": "0.50.0",
     "@wagmi/connectors": "^5.2.0",
     "@wagmi/core": "^2.13.8",
     "ethers": "^5.7.2",
