--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -56,9 +56,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@requestnetwork/payment-processor": "^0.47.0",
-    "@requestnetwork/request-client.js": "^0.49.1-next.2088",
-    "@requestnetwork/web3-signature": "^0.8.0",
+    "@requestnetwork/payment-processor": "0.49.0",
+    "@requestnetwork/request-client.js": "0.50.0",
+    "@requestnetwork/web3-signature": "0.8.1",
     "@web3modal/ethers5": "^5.0.11",
     "ethers": "^5.7.2",
     "vite-plugin-node-polyfills": "^0.22.0"
