fix: shared/utils dependencies

--- a/shared/utils/package.json
+++ b/shared/utils/package.json
@@ -1,4 +1,9 @@
 {
   "name": "@requestnetwork/shared-utils",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@requestnetwork/currency": "0.19.0",
+    "@requestnetwork/request-client.js": "0.50.0",
+    "viem": "2.21.45"
+  }
 }
