--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@requestnetwork/payment-widget",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "./dist/web-component.umd.cjs",
   "scripts": {
     "dev": "vite dev",
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "@requestnetwork/payment-processor": "^0.47.0",
-    "@requestnetwork/request-client.js": "^0.49.1-next.2088",
+    "@requestnetwork/request-client.js": "^0.50.0",
     "@requestnetwork/web3-signature": "^0.8.0",
     "@web3modal/ethers5": "^5.0.11",
     "ethers": "^5.7.2",
