--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -44,7 +44,7 @@
     "@wagmi/core": "^2.13.8",
     "ethers": "^5.7.2",
     "svelte-sonner": "^0.3.27",
-    "viem": "^2.21.27",
+    "viem": "2.21.45",
     "vite-plugin-node-polyfills": "^0.22.0",
     "wagmi": "^2.12.17"
   },
