--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -45,6 +45,7 @@
     "sass": "^1.77.8",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
+    "svelte-sonner": "^0.3.27",
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
