--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "find . -name 'dist' -type d -prune -print -exec rm -rf '{}' \\;",
+    "clean": "find . -path './node_modules' -prune -o -name 'dist' -type d -print -exec rm -rf '{}' \\;",
     "deep-clean": "find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' \\;",
     "build": "turbo run build",
     "build:form": "turbo run build --filter=@requestnetwork/create-invoice-form",
