--- a/packages/create-invoice-form/package.json
+++ b/packages/create-invoice-form/package.json
@@ -36,10 +36,12 @@
     "@requestnetwork/data-format": "0.19.1",
     "@requestnetwork/request-client.js": "0.50.0",
     "@wagmi/core": "^2.13.8",
+    "validator": "^13.12.0",
     "viem": "^2.9.15"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
+    "@types/validator": "^13.12.2",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
     "typescript": "^5.0.0",
