--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "packageManager": "npm@10.5.0",
   "dependencies": {
+    "@changesets/cli": "^2.27.10",
     "@requestnetwork/currency": "0.19.0",
     "bits-ui": "^0.21.12"
   }
