--- a/packages/single-invoice/package.json
+++ b/packages/single-invoice/package.json
@@ -32,35 +32,35 @@
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*"
   ],
+  "dependencies": {
+    "@requestnetwork/payment-detection": "0.49.0",
+    "@requestnetwork/payment-processor": "0.52.0",
+    "@requestnetwork/request-client.js": "0.54.0",
+    "@wagmi/core": "^2.15.2",
+    "ethers": "^5.7.2",
+    "viem": "^2.21.53",
+    "wagmi": "^2.13.3"
+  },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.27.4",
+    "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "sass": "^1.77.8",
+    "publint": "^0.1.9",
     "svelte": "^4.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "svelte-check": "^3.6.0",
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
-  "svelte": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "type": "module",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@requestnetwork/payment-processor": "0.48.0",
-    "@requestnetwork/request-client.js": "0.50.0",
-    "@requestnetwork/web3-signature": "0.8.1",
-    "@web3modal/ethers5": "^5.0.11",
-    "ethers": "^5.7.2",
-    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
