--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -18,6 +18,7 @@ jobs:
           - '@requestnetwork/create-invoice-form'
           - '@requestnetwork/invoice-dashboard'
           - '@requestnetwork/payment-widget'
+          - '@requestnetwork/single-invoice'
     steps:
       - name: Checkout repository 🛎️
         uses: actions/checkout@v4
