--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@changesets/cli": "^2.27.10",
     "@requestnetwork/currency": "0.22.0",
+    "@tanstack/svelte-query": "^5.64.2",
     "bits-ui": "^0.21.12"
   }
 }
