--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "build:payment-widget": "turbo run build --filter=@requestnetwork/payment-widget",
     "build:single-invoice": "turbo run build --filter=@requestnetwork/single-invoice",
     "clean": "npm run clean:dist && npm run clean:sveltekit",
-    "clean:dist": "find . -path ./node_modules -prune -o -name 'dist' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n'",
-    "clean:sveltekit": "find . -name '.svelte-kit' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n'",
+    "clean:dist": "find . -path ./node_modules -prune -o -name 'dist' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n' 2>/dev/null",
+    "clean:sveltekit": "find . -name '.svelte-kit' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n' 2>/dev/null",
     "deep-clean": "npm run clean && npm run deep-clean:turbo && npm run deep-clean:node-modules",
-    "deep-clean:turbo": "find . -name '.turbo' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n'",
-    "deep-clean:node-modules": "find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n'",
+    "deep-clean:turbo": "find . -name '.turbo' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n' 2>/dev/null",
+    "deep-clean:node-modules": "find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' \\; -printf '%p deleted\n' 2>/dev/null",
     "link:react": "npm link $npm_config_app_path/node_modules/react $npm_config_app_path/node_modules/react-dom",
     "link:all": "npm run link:react --app-path=$npm_config_app_path && for d in packages/*; do (cd $d && npm link); done",
     "unlink:all": "for d in packages/*; do (cd $d && npm unlink); done"
