fix: Set container to 8g memory. Adjust max_old_space_size=7680
* 7680 so we leave enough of the memory for other processes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: node:18
+      options: --memory=8g
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,5 +30,5 @@ jobs:
 
       - name: Build
         env:
-          NODE_OPTIONS: "--max-old-space-size=8192"
+          NODE_OPTIONS: "--max-old-space-size=7680"
         run: npm run build
