--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "turbo run build",
+    "build": "NODE_OPTIONS=--max_old_space_size=7680 turbo run build",
     "build:form": "turbo run build --filter=@requestnetwork/create-invoice-form",
     "build:dashboard": "turbo run build --filter=@requestnetwork/invoice-dashboard",
     "build:stakeholder": "turbo run build --filter=@requestnetwork/add-stakeholder",
-    "build:payment-widget": "turbo run build --filter=@requestnetwork/payment-widget",
+    "build:payment-widget": "NODE_OPTIONS=--max_old_space_size=7680 turbo run build --filter=@requestnetwork/payment-widget",
     "build:single-invoice": "turbo run build --filter=@requestnetwork/single-invoice",
     "clean": "npm run clean:dist && npm run clean:sveltekit",
     "clean:dist": "find . -path ./node_modules -prune -o -name 'dist' -type d -exec rm -rf '{}' + -exec echo '{}' deleted \\;",
