chore: move turbo clean script under clean instead of deep-clean

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "build:stakeholder": "turbo run build --filter=@requestnetwork/add-stakeholder",
     "build:payment-widget": "NODE_OPTIONS=--max_old_space_size=7680 turbo run build --filter=@requestnetwork/payment-widget",
     "build:single-invoice": "turbo run build --filter=@requestnetwork/single-invoice",
-    "clean": "npm run clean:dist && npm run clean:sveltekit",
+    "clean": "npm run clean:dist && npm run clean:sveltekit && npm run clean:turbo",
     "clean:dist": "find . -path ./node_modules -prune -o -name 'dist' -type d -exec rm -rf '{}' + -exec echo '{}' deleted \\;",
     "clean:sveltekit": "find . -name '.svelte-kit' -type d -exec rm -rf '{}' + -exec echo '{}' deleted \\;",
-    "deep-clean": "npm run clean && npm run deep-clean:turbo && npm run deep-clean:node-modules",
-    "deep-clean:turbo": "find . -name '.turbo' -type d -exec rm -rf '{}' + -exec echo '{}' deleted \\;",
+    "clean:turbo": "find . -name '.turbo' -type d -exec rm -rf '{}' + -exec echo '{}' deleted \\;",
+    "deep-clean": "npm run clean && npm run deep-clean:node-modules",
     "deep-clean:node-modules": "find . -name 'node_modules' -type d -exec rm -rf '{}' + -exec echo '{}' deleted \\;",
     "link:react": "npm link $npm_config_app_path/node_modules/react $npm_config_app_path/node_modules/react-dom",
     "link:all": "npm run link:react --app-path=$npm_config_app_path && for d in packages/*; do (cd $d && npm link); done",
